tests/concurrency/valid/freeLock.wacc
begin
    lock l;
    free l
end