tests/concurrency/semanticErr/assignLock.wacc
begin
    lock l = 4
end